--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -10,7 +10,6 @@ test:
 source:
 - any: ['src/**/*', '!src/docs/*']
 
-# Add 'frontend` label to any change to *.js files as long as the `main.js` hasn't changed
+# Add 'frontend` label to any change to files as long as the `main.js` hasn't changed
 frontend:
 - any: ['docker/**/*']
-  all: ['!src/main.js']
