--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -3,16 +3,16 @@ name: Anchore
 
 on:
   workflow_run:
-    workflows: ["build"]
+    workflows: ['build']
     branches:
-      - "main"
-      - "pipeline-1"
+      - 'master'
+      - 'pipeline-1'
     types:
       - completed
-  workflow_dispatch:
-    inputs:
-      name:
-        description: 'Manually Execute Tests'
+#  workflow_dispatch:
+#    inputs:
+#      name:
+#        description: 'Manually Execute Tests'
 #  pull_request:
 #    branches:
 #      - master
