--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -6,7 +6,7 @@ on:
     workflows: ['build']
     branches:
       - 'pipeline-1'
-      - 'main'
+      - 'master'
     types:
       - completed
 #  workflow_dispatch:
