--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -17,9 +17,9 @@ on:
 #    branches:
 #      - master
 ## for testing
-#  push:
-#    branches:
-#      - 'pipeline-1'
+  push:
+    branches:
+      - 'pipeline-2'
 
 env:
   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
@@ -40,6 +40,27 @@ jobs:
       VERSION: 1.2.3
       ENV: Dev
     steps:
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ca-central-1
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - name: get latest ECR image
+      run: |
+        AWSIMAGE=$(aws ecr describe-images --output json --repository-name dev-testing --query 'sort_by(imageDetails,& imagePushedAt)[-1].imageTags[0]' | jq . --raw-output)
+        echo "AWSIMAGE=$AWSIMAGE" >> $GITHUB_ENV
+
+    - name: Aws Image Debug
+      run: |
+        echo $AWSIMAGE
+        echo ${{ env.AWSIMAGE }}
+
       # DONT PUT slashes to escape " into this as its not setup for it as far as could tell
     - name: create-json
       id: create-json
