--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -56,10 +56,11 @@ jobs:
         AWSIMAGE=$(aws ecr describe-images --output json --repository-name dev-testing --query 'sort_by(imageDetails,& imagePushedAt)[-1].imageTags[0]' | jq . --raw-output)
         echo "AWSIMAGE=$AWSIMAGE" >> $GITHUB_ENV
 
-    - name: Aws Image Debug
+    - name: AWS Image Debug
       run: |
         echo $AWSIMAGE
         echo ${{ env.AWSIMAGE }}
+        echo ${{ steps.login-ecr.outputs.registry }}:${{ env.AWSIMAGE }}
 
       # DONT PUT slashes to escape " into this as its not setup for it as far as could tell
     - name: create-json
@@ -67,7 +68,8 @@ jobs:
       uses: jsdaniell/create-json@1.1.2
       with:
         name: "build.json"
-        json: '{"builds":[{"imageName":"${{ env.IMAGE-1 }}","tag":"${{ env.TAG-1 }}"},{"imageName":"${{ env.IMAGE-2 }}","tag":"${{ env.TAG-2 }}"}]}'
+        #json: '{"builds":[{"imageName":"${{ env.IMAGE-1 }}","tag":"${{ env.TAG-1 }}"},{"imageName":"${{ env.IMAGE-2 }}","tag":"${{ env.TAG-2 }}"}]}'
+        json: '{"builds":[{"imageName":"${{ env.IMAGE-1 }}","tag":"${{ env.TAG-1 }}"},{"imageName":"${{ env.IMAGE-2 }}","tag":"${{ env.TAG-2 }},{"imageName":"${{ steps.login-ecr.outputs.registry }}","tag":"${{ env.AWSIMAGE }}"}]}'
 
     - name: Upload build json artifact
       uses: actions/upload-artifact@v2
@@ -97,6 +99,17 @@ jobs:
       matrix: ${{ fromJson(needs.set-matrix.outputs.matrix) }}
       fail-fast: false
     steps:
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ca-central-1
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+      
     - name: Debug image name
       run: echo ${{ matrix.builds.tag }}
 
