--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -111,8 +111,11 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Login to Amazon ECR
+    - name: ECR Login
       run: aws ecr get-login-password --region ca-central-1 | docker login --username AWS --password-stdin 949207431024.dkr.ecr.ca-central-1.amazonaws.com
+
+    - name: Pull image
+      run: docker pull ${{ env.IMAGE }}
 
     - name: Debug image name
       run: echo ${{ matrix.builds.tag }}
