--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -8,17 +8,10 @@ on:
       - 'master'
     types:
       - completed
-#  workflow_dispatch:
-#    inputs:
-#      name:
-#        description: 'Manually Execute Tests'
-#  pull_request:
-#    branches:
-#      - master
 ## for testing
-  push:
-    branches:
-      - 'pipeline-2'
+#  push:
+#    branches:
+#      - 'pipeline-2'
 
 env:
   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
