--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -10,6 +10,9 @@ on:
     branches:
       - "*"
       - "**/*"
+    paths:
+      - 'src/*.py'
+
   pull_request:
     types:
       [opened, reopened]
