--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -7,8 +7,12 @@ on:
       name:
         description: 'Manually execute Tests'
   push:
-    branches:
-      - "*"
+#    branches:
+#      - "*"
+#      - "**/*"
+    paths:
+      - 'src/*.py'
+
   pull_request:
     types:
       [opened, reopened]
