--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -133,6 +133,7 @@ jobs:
       run: echo ${{ env.IMAGE }}
 
     - name: Grype scan
+      id: scan image
       run: grype ${{ env.IMAGE }}
 
     - name: debug output payload
@@ -144,5 +145,5 @@ jobs:
         status: ${{ job.status }}
         steps: ${{ toJson(steps) }}
         channel: '#githubactions_notifications'
-#      if: cancelled() || failure()
+
       if: always()
